Fixing Alignment Flex Utilities Class Attributes

--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,6 @@ section{ display: flex; }
 .flex{ display: flex; }
 .flex-column{ flex-direction: column; }
 .flex-one{ flex: 1; }
+.align-center {align-items: center;}
+.center {justify-content: center;}
+.space-between {justify-content: space-between;} 
